--- a/sytles/style.css
+++ b/sytles/style.css
@@ -20,6 +20,12 @@
     border:none;
     font-weight:bold;
     font-size:16px;
+    transition-duration: 0.9s;
+    cursor: pointer;
+}
+.btn-change:hover{
+    background-color: rgba(255, 255, 0, 1);
+    color:black;
 }
 .text-center{
     text-align:center;
